# homelab-data

./: .gitignore  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: integration-tests.yml  workflow-deployment.yml
docs/: home-assistance-external-access.md  n8n-rabbitmq-triggers.md  n8n-schedule-triggers.md  n8n-webhook-triggers.md
docs/diagrams/: data-mesh-architecture.md  msg-sequence-flow.md
integrations/home-assistant/: command-subscriber.py  config.yaml  event-publisher.py  mqtt-integration.yaml  network-integration.yaml
integrations/influxdb/: config.yaml  influxdb-consumer.py
integrations/minio/: config.yaml  data-archiver.py
integrations/triton/: config.yaml  inference-request-handler.py  mcp-handler.py  metrics-config.yaml  metrics-publisher.py  requirements.txt
n8n/config/: backup-config.yml
n8n/scripts/: workflow-backup.py
n8n/tests/: requirements.txt  workflow-testing-framework.py
n8n/workflows/: computer-vision-processing.json  predictive-maintenance.json  voice-assistant-automation.json
rabbitmq/bindings/: bindings.yaml
schemas/: ai-inference-request.json  ai-inference-response.json  alert-notification.json  device-state-change.json  schema-registry.json  sensor-reading.json  system-metric.json  validation.py
scripts/: deploy_workflows.py  validate_workflows.py  worflow-docs-generator.py
tests/: consumer-tests-config.yaml  consumer-tests.py  integration-config.yaml  integration-tests.py  message-flow-tests.py  msg-flow-config.yaml  producer-tests.py
transformations/: pipeline.py  transformers.py
(+43 files in other folders)
